# ansible-ui

./: .dockerignore  .env.production  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-build.yml  python-lint.yml
backend/: .env.example  README.md  manage.py  pyproject.toml  setup.cfg
backend/ansibeau/: asgi.py  settings.py  urls.py  wsgi.py
backend/ansible_ui/: settings.py
backend/api/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
backend/api/management/commands/: populate_mock_data.py
backend/api/migrations/: 0001_initial.py  0002_alter_host_id_alter_log_id_alter_play_id.py  0003_make_play_date_nullable.py  0004_add_play_line_number_and_order.py
backend/api/services/: __init__.py  log_parser.py
backend/api/templates/admin/api/log/: change_list.html  submit_test.html
docker/: entrypoint.api.sh  entrypoint.web.sh  nginx.conf
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/public/: config.js
frontend/src/: App.tsx
frontend/src/components/: CollapsibleTaskSection.tsx  PlayCard.tsx  ServerCard.tsx  StatusBadge.tsx
frontend/src/pages/: LogPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: ansible.ts  config.d.ts
